Clean code after Sonar review.